--- a/MyCalendar.MVC/Views/Home/Calendar.cshtml
+++ b/MyCalendar.MVC/Views/Home/Calendar.cshtml
@@ -73,7 +73,7 @@
                     </div>
                     <div class="form-group">
                         <label>Start</label>
-                        <input type="datetime-local" id="txtStart" class="form-control" />
+                        <input type="datetime-local" step="300" id="txtStart" class="form-control" />
                     </div>
                     <div class="form-group" style="margin-left: -30px">
                         <div class="checkbox checkbox-inline">
@@ -85,18 +85,12 @@
                     </div>
                     <div class="form-group" id="divEndDate" style="display:none">
                         <label>End</label>
-                        <input type="datetime-local" id="txtEnd" class="form-control" />
+                        <input type="datetime-local" step="300" id="txtEnd" class="form-control" />
                     </div>
                     <div class="form-group">
                         <label>Description</label>
                         <textarea id="txtDescription" rows="3" class="form-control"></textarea>
                     </div>
-                    @if (Model.User.CronofyReady)
-                    {
-                        <div class="form-group">
-                            <label><input type="checkbox" id="chkCronofy" checked="checked" /> Save to @Model.DefaultCalendarProvider calendar?</label>
-                        </div>
-                    }
                     <button type="button" id="btnSave" class="btn btn-success">Save</button>
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                 </form>
@@ -266,7 +260,7 @@
                             }
                             else {
                                 alert(data.responseText)
-                                window.location.reload(false);
+                                //window.location.reload(false);
                             }
                         },
                         error: function () {
@@ -304,6 +298,7 @@
             function hideSplitDates(startDate, endDate) {
                 var diff = endDate.diff(startDate, 'days');
 
+
                 if ($('#hdEventID').val() != 0) {
                     $('#divSplitDates').hide();
                 }
@@ -318,12 +313,18 @@
             function openAddEditForm() {
                 if (selectedEvent != null) {
                     $('#hdEventID').val(selectedEvent.eventID);
-                    $('#txtStart').val(selectedEvent.start.format('YYYY-MM-DD[T]HH:mm'));
+
+                    var nextStartHour = new Date().getHours() + 1;
+                    var nextEndHour = new Date().getHours() + 3;
+                    var startTime = (selectedEvent.eventID != 0 ? "HH:mm" : (nextStartHour < 10 ? "0" + nextStartHour : nextStartHour) + ":00");
+                    var endTime = (selectedEvent.eventID != 0 ? "HH:mm" : (nextEndHour < 10 ? "0" + nextEndHour : nextEndHour) + ":00");
+
+                    $('#txtStart').val(selectedEvent.start.format('YYYY-MM-DD[T]' + startTime));
                     $('#chkIsFullDay').prop("checked", selectedEvent.allDay || false);
                     $('#chkIsFullDay').change();
                     $('#chkTentative').prop("checked", selectedEvent.tentative || false);
                     $('#chkTentative').change();
-                    $('#txtEnd').val(selectedEvent.end != null ? selectedEvent.end.format('YYYY-MM-DD[T]HH:mm') : '');
+                    $('#txtEnd').val(selectedEvent.end != null ? selectedEvent.end.format('YYYY-MM-DD[T]' + endTime) : '');
                     $('#txtDescription').val(selectedEvent.description);
                     $('#ddTagID').val(selectedEvent.tagID);
                     $('#splitDates').val('');
@@ -359,8 +360,7 @@
                     Description: $('#txtDescription').val(),
                     IsFullDay: $('#chkIsFullDay').is(':checked'),
                     Tentative: $('#chkTentative').is(':checked'),
-                    SplitDates: $('#splitDates').val(),
-                    Cronofy: $('#chkCronofy').is(':checked')
+                    SplitDates: $('#splitDates').val()
                 }
                 SaveEvent(data);
                 // call function for submit data to the server
@@ -378,7 +378,7 @@
                         }
                         else {
                             alert(data.responseText)
-                            window.location.reload(false);
+                            //window.location.reload(false);
                         }
                     },
                     error: function () {
