--- a/MyCalendar.MVC/Views/Home/Settings.cshtml
+++ b/MyCalendar.MVC/Views/Home/Settings.cshtml
@@ -6,38 +6,6 @@
 
 <div id="accordion">
     @Html.Partial("_Status", BaseViewModel)
-    @if (string.IsNullOrEmpty(BaseViewModel.User.CronofyUid))
-    {
-        <div class="alert alert-info" role="alert">
-            <div class="col-auto align-self-start">
-                <div class="glyphicon glyphicon-info-sign"></div>
-                Your account is not linked to any external calendar provider, click <a href="@Model.CronofyCalendarAuthUrl">here</a> to link an account now.
-            </div>
-        </div>
-    }
-    else
-    {
-        if (string.IsNullOrEmpty(BaseViewModel.User.DefaultCalendar))
-        {
-            <div class="alert alert-warning" role="alert">
-                <div class="col-auto align-self-start">
-                    <div class="glyphicon glyphicon-exclamation-sign"></div>
-                    An external calender provider has been linked but no default calendar has been set, click <a href="/cronofy/profiles">here</a> to set a default calendar.
-                </div>
-            </div>
-        }
-        else if (BaseViewModel.User.CronofyReady)
-        {
-            <div class="alert alert-success" role="alert">
-                <div class="col-auto align-self-start">
-                    <div class="glyphicon glyphicon-ok-circle"></div>
-                    Your <a href="/cronofy/profiles">@BaseViewModel.DefaultCalendarProvider calendar</a> is linked to your account and is ready to go.
-                </div>
-            </div>
-        }
-
-    }
-
     <div class="card">
         <div class="card-header" id="headingOne">
             <h7 class="mb-0">
@@ -53,25 +21,29 @@
                 {
                     <div class="form-group">
                         @Html.LabelFor(x => x.User.Name)
-                        @Html.TextBoxFor(s => s.User.Name, new { @Value = BaseViewModel.User.Name, @class = "form-control", @type = "text", @placeholder = "Name", @required = "required" })
+                        @Html.TextBoxFor(s => s.User.Name, new { @class = "form-control", @type = "text", @placeholder = "Name", @required = "required" })
                     </div>
                     <div class="form-group">
                         @Html.LabelFor(x => x.User.Passcode, "Login Passcode") <font color="red"><small>(changing this will log you out)</small></font>
-                        @Html.TextBoxFor(s => s.User.Passcode, new { @Value = BaseViewModel.User.Passcode, @class = "form-control", @type = "number", @placeholder = "Passcode", @required = "required" })
+                        @Html.TextBoxFor(s => s.User.Passcode, new { @class = "form-control", @type = "number", @placeholder = "Passcode", @required = "required" })
                     </div>
                     <div class="form-group">
                         @Html.LabelFor(x => x.User.Email)
-                        @Html.TextBoxFor(s => s.User.Email, new { @Value = BaseViewModel.User.Email, @class = "form-control", @type = "text", @placeholder = "Email" })
+                        @Html.TextBoxFor(s => s.User.Email, new { @class = "form-control", @type = "text", @placeholder = "Email" })
                     </div>
                     <div class="form-group">
                         @Html.LabelFor(x => x.User.PhoneNumber)
-                        @Html.TextBoxFor(s => s.User.PhoneNumber, new { @Value = BaseViewModel.User.PhoneNumber, @class = "form-control", @type = "text", @placeholder = "Phone number" })
+                        @Html.TextBoxFor(s => s.User.PhoneNumber, new { @class = "form-control", @type = "text", @placeholder = "Phone number" })
                     </div>
-                    @Html.HiddenFor(x => x.User.UserID, new { @Value = BaseViewModel.User.UserID })
-                    @Html.HiddenFor(x => x.User.CronofyUid, new { @Value = BaseViewModel.User.CronofyUid })
-                    @Html.HiddenFor(x => x.User.AccessToken, new { @Value = BaseViewModel.User.AccessToken })
-                    @Html.HiddenFor(x => x.User.RefreshToken, new { @Value = BaseViewModel.User.RefreshToken })
-                    @Html.HiddenFor(x => x.User.DefaultCalendar, new { @Value = BaseViewModel.User.DefaultCalendar })
+                    <div class="form-group">
+                        @Html.CheckBoxFor(s => s.User.EnableCronofy)
+                        <span>Enable MiCalendar Sync</span>
+                    </div>
+                    @Html.HiddenFor(x => x.User.UserID)
+                    @Html.HiddenFor(x => x.User.CronofyUid)
+                    @Html.HiddenFor(x => x.User.AccessToken)
+                    @Html.HiddenFor(x => x.User.RefreshToken)
+                    @Html.HiddenFor(x => x.User.ExtCalendars)
                     <button type="submit" class="btn btn-primary">Update</button>
                 }
             </div>
@@ -87,7 +59,7 @@
         </div>
         <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
             <div class="card-body">
-                @Html.Partial("_Tags", new MyCalendar.DTOs.TagsDTO { Tags = BaseViewModel.UserTags.Tags, Types = Model.Types, UserID = BaseViewModel.User.UserID })
+                @Html.Partial("_Tags", new MyCalendar.DTOs.TagsDTO { Tags = BaseViewModel.UserTags.Tags, Types = Model.Types, UserID = Model.User.UserID })
             </div>
         </div>
     </div>
